--- a/public/global.css
+++ b/public/global.css
@@ -43,3 +43,14 @@ body {
 .bg-orange {
     background-color: #d76c58;
 }
+.home {
+    background-image: linear-gradient(
+            to bottom,
+            rgba(0, 0, 0, 0.63),
+            rgba(0, 0, 0, 0.65)
+        ),
+        url("images/home.jpg");
+    width: 100%;
+    height: 70vh;
+    background-size: cover;
+}
